# small-jvm

./: CMakeLists.txt  README.md  launch.sh  main.c  main.cpp  opcodes.h  test.c  test.cpp  test.h  vm.c  vm.cpp  vm_interface.h
mem/: CMakeLists.txt  Makefile  double_linked_list.h  double_linked_list_test.cpp
